# payjp-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic_charge.rs  webhook_handler.rs
src/: balance.rs  card.rs  charge.rs  client.rs  customer.rs  error.rs  event.rs  lib.rs  models.rs  plan.rs  statement.rs  subscription.rs  term.rs  token.rs  transfer.rs  webhook.rs
tests/: charge_test.rs  customer_test.rs  subscription_test.rs
