[package]
name = "payjp-rs"
version = "0.2.0"
edition = "2021"
description = "Unofficial Rust SDK for PAY.JP payment API"
license = "MIT"
repository = "https://github.com/Ryujiyasu/payjp-rs"
keywords = ["payjp", "payment", "japan", "api"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"
